--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3c718ba2ba.js" crossorigin="anonymous"></script>
-    <title>Vacation Planner</title>
+    <title>Travelsoul</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
